crates/solidity-v2/testing/snapshots/diagnostics_output/type_system/storage_layout_base_slot/user_defined_value_type/generated/solc/0.8.31-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 1763] Error: The base slot of the storage layout must evaluate to an integer (the type is 'MyType' instead).
   ╭─[input.sol:9:22]
   │
 9 │ contract C layout at x {}
   │                      ┬  
   │                      ╰── Error occurred here.
───╯
